@@ -25,9 +25,10 @@
 </table>
 
 <p>The Eclipse-OProfile sources are available under anonymous CVS access:</p>
-<p><code>cvs -d :pserver:anonymous@dev.eclipse.org:/home/tools login</code></p>
+<pre>$ cvs -d :pserver:anonymous@dev.eclipse.org:/home/tools login</pre>
 <p>Press 'enter' when prompted for a password.</p>
-<p><code>cvs -d :pserver:anonymous@dev.eclipse.org:/home/tools co -z9 org.eclipse.cdt-contrib/org.eclipse.cdt.oprofile</code></p>
+<pre>$ cvs -d :pserver:anonymous@dev.eclipse.org:/home/tools co -z9 \
+	org.eclipse.cdt-contrib/org.eclipse.cdt.oprofile</pre>
 
 <!-- End CVS section -->
 
@@ -52,7 +53,7 @@ mailing list.</p>
 href="http://bugs.eclipse.org/bugs">Bugzilla</a> ticket, then attach your patch
 to the open bug.  A committer will review your patch and commit it to the
 source repository upon approval.  Alternatively, you can post your patch to the
-<a href="mailto:cdt-contrib-dev@eclipse.org">cdt-patch@eclipse.org</a>
+<a href="mailto:cdt-contrib-dev@eclipse.org">cdt-contrib-dev@eclipse.org</a>
 mailing list.</p>
 
 <p>We use <a href="http://www.gnu.org/prep/standards/html_node/Change-Logs.html#Change-Logs">GNU-style
@@ -62,6 +63,40 @@ the patch in the patch file.</p>
 
 <!-- End Patches section -->
 
+<!-- Begin Building section -->
+<table class="section">
+<tr><td>Building Eclipse-OProfile</td></tr>
+</table>
+
+<p>We use the standard <a
+href="http://dev.eclipse.org/viewcvs/index.cgi/*checkout*/org.eclipse.releng.basebuilder/readme.html?rev=HEAD">Eclipse
+PDE build procedure</a>.  To build Eclipse-OProfile, you must have a
+suitable platform driver and CDT build installed.  Then, execute the following
+procedure on your build machine:</p>
+<ol>
+<li>Check out the Eclipse-OProfile releng plug-in:
+<pre>
+$ cvs -d :pserver:anonymous@dev.eclipse.org/home/tools co -z9 \
+	org.eclipse.cdt-contrib/org.eclipse.cdt.oprofile/org.eclipse.cdt.oprofile.releng
+</pre>
+</li>
+<li>Start the build:
+<pre>
+$ cd /my/eclipse/dir
+$ java -cp startup.jar \
+	org.eclipse.core.launcher.Main \
+	-application org.eclipse.ant.core.antRunner \
+	-DbaseLocation=$(pwd) \
+	-Dpde.build.scripts=$(pwd)/plugins/org.eclipse.pde.build_3.0.0/scripts \
+	-Dconfigs=linux,gtk,x86
+</pre>
+<em>NOTE: </em>If you are building on an architecture other than x86, modify the last line accordingly.  The build configuration must match an assembly target in the <code>customTargets.xml</code> file.  If your desired configuration does not have an assembly target, write one and send us a patch.
+</li>
+<li>As usual, the PDE builder will deposit a distributable archive (.tar.gz) for the build in the <code>results</code> directory.</li>
+</ol>
+
+<!-- End Building section -->
+
 <!-- Begin branch info section -->
 <table class="section">
 <tr><td>Branch Information</td></tr>
@@ -70,7 +105,7 @@ the patch in the patch file.</p>
 <p>All development for Eclipse-OProfile with OProfile 0.5.4 is done on
 oprofile-0_5_4-branch.  This branch is mostly in maintenance mode.  The
 mainline (HEAD) is currently active for Eclipse-OProfile development with
-OProfile 0.8.</p>
+OProfile 0.8.x.</p>
 
 <!-- End branch info section -->
 
