@@ -46,31 +46,42 @@ this) by typing: <code>./install</code></li>
 <tr><td>Downloads</td></tr>
 </table>
 
-<table cellpadding="5">
+<p><em>NOTE: </em>Eclipse-OProfile contains native code; the builds listed
+below will only run on the specified architecture.</p>
+
+<table border="1" cellpadding="5">
 <tr>
 <th>Build</th>
+<th>Architecture</th>
 <th>Platform Driver</th>
+<th>CDT Version</th>
 <th>OProfile Version</th>
 <th>Date</th>
 </tr>
 
 <tr>
 <td><a href="http://people.redhat.com/jhealy/plugins/eclipse-oprofile-0_5_4-branch.zip">Initial contribution</a></td>
+<td>x86</td>
 <td>3.0</td>
+<td>2.0</td>
 <td>0.5.4</td>
 <td>2004-10-13</td>
 </tr>
 
 <tr>
 <td><a href="http://people.redhat.com/jhealy/plugins/eclipse-oprofile.zip">Initial contribution</a></td>
+<td>x86</td>
 <td>3.0</td>
+<td>2.0</td>
 <td>0.8</td>
 <td>2004-10-13</td>
 </tr>
 
 <tr>
 <td><a href="http://people.redhat.com/handcock/eclipse-oprofile/I.I200505271302/">I200505271302</a></td>
+<td>x86</td>
 <td>3.1M7</td>
+<td>3.0M6 (I200504140301)</td>
 <td>0.8.2</td>
 <td>2005-05-27</td>
 </tr>
